--- a/mindfulness.html
+++ b/mindfulness.html
@@ -11,10 +11,17 @@
     font-size:20px;font-weight:bold;transition:transform 2s;}
   button{margin:5px;padding:8px 14px;border:none;border-radius:6px;
     background:#2e8b57;color:#fff;cursor:pointer;}
+  button:hover{background:#256b47;}
+  .top-bar{margin:15px;text-align:left;}
+  .home-btn{background:#4caf50;}
   footer{margin-top:20px;color:#555;}
 </style>
 </head>
 <body>
+<div class="top-bar">
+  <a href="index.html"><button class="home-btn">🏠 Home</button></a>
+</div>
+
 <h1>Mindfulness</h1>
 
 <section>
@@ -43,7 +50,12 @@ function startBreath(){
     el.style.transform=['scale(1)','scale(1.3)','scale(1)','scale(0.8)'][p];
   },3000);
 }
-function stopBreath(){clearInterval(iv);const el=document.getElementById('rect');el.textContent='Breathe';el.style.transform='scale(1)';}
+function stopBreath(){
+  clearInterval(iv);
+  const el=document.getElementById('rect');
+  el.textContent='Breathe';
+  el.style.transform='scale(1)';
+}
 function toggleMusic(id){
   const a=document.getElementById(id);
   a.paused?a.play():a.pause();
