--- a/mindfulness.html
+++ b/mindfulness.html
@@ -1,35 +1,65 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Mindfulness</title>
-  <!-- External CSS -->
-  <link rel="stylesheet" href="mindfulness.css">
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width,initial-scale=1">
+<title>GreenBite — Mindfulness</title>
+<style>
+  body{font-family:Arial,sans-serif;text-align:center;background:#f5fff7;}
+  .rectangle{width:200px;height:120px;margin:20px auto;background:#a8e6cf;
+    border-radius:12px;display:flex;align-items:center;justify-content:center;
+    font-size:20px;font-weight:bold;transition:transform 2s;}
+  button{margin:5px;padding:8px 14px;border:none;border-radius:6px;
+    background:#2e8b57;color:#fff;cursor:pointer;}
+  button:hover{background:#256b47;}
+  .top-bar{margin:15px;text-align:left;}
+  .home-btn{background:#4caf50;}
+  footer{margin-top:20px;color:#555;}
+</style>
 </head>
 <body>
-  <nav>
-    <div class="brand">GreenBite🍃</div>
-    <a href="index.html">Home🏠</a>
-  </nav>
+<div class="top-bar">
+  <a href="index.html"><button class="home-btn">🏠 Home</button></a>
+</div>
 
-  <main>
-    <h1>Mindfulness</h1>
-    <div class="card">
-      <div id="breath" class="breath">Breathe</div>
-      <p id="breathText"></p>
-      <button onclick="startBreathing()">Start Breath🌬</button>
-      <button onclick="stopBreathing()">Stop</button>
-      <hr>
-      <h3>Timer</h3>
-      <input id="minInput" type="number" value="1" min="1"> min
-      <button onclick="startTimer()">Start Session</button>
-      <p id="sessionMsg"></p>
-      <button id="soundToggle" onclick="toggleSound()">Toggle Ambient</button>
-    </div>
-  </main>
+<h1>Mindfulness</h1>
 
-  <!-- External JavaScript -->
-  <script src="mindfulness.js"></script>
+<section>
+  <div id="rect" class="rectangle">Breathe</div>
+  <button onclick="startBreath()">Start</button>
+  <button onclick="stopBreath()">Stop</button>
+</section>
+
+<section>
+  <h3>Calm Music</h3>
+  <button onclick="toggleMusic('nature')">Toggle Nature</button>
+  <button onclick="toggleMusic('piano')">Toggle Piano</button>
+  <audio id="nature" loop src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3"></audio>
+  <audio id="piano" loop src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-2.mp3"></audio>
+</section>
+
+<footer>© GreenBite</footer>
+
+<script>
+let iv;
+function startBreath(){
+  const el=document.getElementById('rect');let p=0;
+  iv=setInterval(()=>{
+    p=(p+1)%4;
+    el.textContent=['Inhale','Hold','Exhale','Hold'][p];
+    el.style.transform=['scale(1)','scale(1.3)','scale(1)','scale(0.8)'][p];
+  },3000);
+}
+function stopBreath(){
+  clearInterval(iv);
+  const el=document.getElementById('rect');
+  el.textContent='Breathe';
+  el.style.transform='scale(1)';
+}
+function toggleMusic(id){
+  const a=document.getElementById(id);
+  a.paused?a.play():a.pause();
+}
+</script>
 </body>
 </html>
