--- a/mindfulness.html
+++ b/mindfulness.html
@@ -3,49 +3,57 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width,initial-scale=1">
-<title>Mindfulness</title>
+<title>GreenBite — Mindfulness</title>
 <link rel="stylesheet" href="main.css">
-<link rel="stylesheet" href="mindfulness.css">
 </head>
 <body>
-<nav>
-  <div class="brand">GreenBite🍃</div>
-  <a href="index.html">Home🏠</a>
-</nav>
+
+<header class="nav-wrap">
+  <div class="logo">GreenBite</div>
+  <nav id="nav">
+    <a href="index.html">Home</a>
+    <a href="recipes.html">Recipes</a>
+    <a href="calculator.html">Calculator</a>
+    <a href="workouts.html">Workouts</a>
+    <a href="mindfulness.html" class="active">Mindfulness</a>
+    <a href="contact.html">Contact</a>
+  </nav>
+</header>
 
 <div style="text-align:right;font-size:1.1em;margin-bottom:8px;">
   <span id="clock"></span>
 </div>
 
-<main>
+<main class="container">
   <h1>Mindfulness</h1>
-  <div class="card">
-    <h2>Guided Breathing Cycle</h2>
-    <p>Follow the inhale, hold, and exhale cycle below. The circle will expand and contract to guide your breathing.</p>
-    <div id="breath" class="breath">Breathe</div>
-    <div style="width:0;height:0;border-left:30px solid transparent;border-right:30px solid transparent;border-top:40px solid #0a680d;margin:16px auto;"></div>
-    <p id="breathText"></p>
-    <div id="cycleCount" style="font-weight:bold;color:#0a680d;margin-bottom:8px;">Cycle: 0</div>
 
-    <div style="margin: 10px 0;">
-      <span style="display:inline-block;width:16px;height:16px;background:skyblue;border-radius:50%;margin-right:6px;"></span> Inhale
-      <span style="display:inline-block;width:16px;height:16px;background:lightgreen;border-radius:50%;margin:0 6px 0 16px;"></span> Exhale
-    </div>
+  <!-- Breathing Section -->
+  <section>
+    <div id="rect" class="rectangle">Breathe</div>
+    <button id="start-breath">Start</button>
+    <button id="stop-breath">Stop</button>
+  </section>
 
-    <button onclick="startBreathing()">Start Breath🌬</button>
-    <button onclick="stopBreathing()">Stop</button>
+  <!-- Music Section -->
+  <section>
+    <h3>Calm Music</h3>
+    <button id="toggle-nature">Toggle Nature</button>
+    <button id="toggle-piano">Toggle Piano</button>
+    <audio id="nature" loop src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3"></audio>
+    <audio id="piano" loop src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-2.mp3"></audio>
+  </section>
 
-    <hr>
-
-    <h3>Timer</h3>
-    <input id="minInput" type="number" value="1" min="1"> min
-    <button onclick="startTimer()">Start Session</button>
-    <p id="sessionMsg"></p>
-    <button id="soundToggle" onclick="toggleSound()">Toggle Ambient</button>
+  <!-- Breath Photo Section -->
+  <h3 style="margin-top:1.5rem">Breath Session</h3>
+  <div style="margin-top:.5rem;text-align:center">
+    <img src="assets/breath.jpg" alt="Breath Session" 
+         style="max-width:100%;border-radius:8px;box-shadow:0 2px 6px rgba(0,0,0,0.2)">
   </div>
 </main>
 
-<!-- 🔗 External JavaScript -->
+<footer>© GreenBite</footer>
+
+<script src="common.js"></script>
 <script src="mindfulness.js"></script>
 </body>
 </html>
